--- a/web_static/styles/body.css
+++ b/web_static/styles/body.css
@@ -1,10 +1,11 @@
 body{
     margin: 0;
-    /*padding: 0;*/
+    padding: 0;
     font-size: 14px;
     font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
     overflow: auto;
     height: auto;
+    background-color: #d4d4e2;
 }
 .Container{
     display: flexbox;
@@ -13,21 +14,14 @@ body{
     margin-left: 20px;
     margin-right: 10px;
     width: 98%;
+    max-height: 80%;
     position: fixed;
     z-index: 999;
     overflow: auto;
-}
-#topContainer{
-    position: relative;
-    display: flexbox;
-    margin-top: 80px;
-    margin-left: 2%;
-    margin-right: 30%;
-    border: 1px solid rgb(75, 56, 56);
-    border-radius: 9px;
+    border-radius: 25px;
 }
 .wholePage{
-    border: 1px solid #4b4b4b;
+    border: 1px solid #c5bdbd;
     position: static;
     border-radius: 10px;
     margin-left: 4px;
@@ -36,24 +30,17 @@ body{
     padding-top: 2px;
     padding-left: -89px;
     width: 99%;
-    height: 445px;
+    height: auto;
     padding-bottom: 3%;
     overflow: scroll;
-    overflow-y: scroll;
+    background-color: #000005;
 }
 
-#bottomPannel{
-    width: 96.5%;
-    height: 400px;
-    position: relative;
-    display: none;
-    margin-left: 2%;
-    border: 1px solid rgb(75, 56, 56);
-    border-radius: 9px;
-    margin-top: 25px;/*
-    padding-top: 10%;
-    padding-bottom: 10%;
-    padding-left: 50%;
-    padding-right: 45%;*/
-    overflow: scroll;
+#topPanel{
+    background-color: #1d1c1c;
+}
+#topPanelHeaderDrop{
+    margin: 9px;
+    border: 1px solid #c5bdbd;
+    border-radius: 10px;
 }
