--- a/web_static/styles/profile.css
+++ b/web_static/styles/profile.css
@@ -1,13 +1,12 @@
-.profileWindow {
+#profileWindow {
     display: none;
     position: relative;
-    background-position-x: fixed;
     float: right;
     width: 26%;
     margin-top: -15px;
-    margin-right: 20px;
+    margin-right: 1%;
     margin-left: 10px;
-    height: 460px;
+    height: auto;
     border-radius: 19px;
     color: #CCCCCC;
     overflow: auto;
@@ -48,7 +47,7 @@
     padding: 3px;
     background-position: center;
     height: 115px;
-    width: 29%;
+    min-width: 28%;
     background-repeat: no-repeat;
     border-radius: 50%;
     margin-top: 25px;
@@ -116,9 +115,10 @@
     border-radius: 19px;
     margin-top: 10%;
     margin-left: 5px;
+    overflow: auto;
 }
-#otherInfo{
-    display:flexbox;
+#otherInformation{
+    display: none;
     border: 1px solid #4b3838;
     border-radius: 19px;
     margin-top: 13%;
