--- a/web_static/styles/toppanel.css
+++ b/web_static/styles/toppanel.css
@@ -1,22 +1,25 @@
 .overallGithubStats{
     
     border: 1.5px dashed #38d667;
-    height: 410px;
+    height: auto;
     margin-top: 4px;
     margin-left: 1%;
     margin-right: 1%;
     border-radius: 10px;
-    z-index: 1500;
+    background-color: #161617;
+    z-index: 990;
 }
 
 .overallRepoStats{
     position: relative;
     border: 1.5px dashed #38d667;
-    height: 410px;
+    height: auto;
+    padding: 8px;
     margin-top: 4px;
     margin-left: 1%;
     margin-right: 1%;
     border-radius: 10px;
+    background-color: #161616;
     z-index: 100;
 }
 
@@ -28,7 +31,9 @@
     margin-left: 1%;
     margin-right: 1%;
     border-radius: 10px;
+    background-color: #161616;
     z-index: 150;
+    
 }
 
 .overallFileStats{
@@ -39,5 +44,6 @@
     margin-left: 1%;
     margin-right: 1%;
     border-radius: 10px;
-    z-index: 1200;
+    background-color: #161616;
+    z-index: 998;
 }
