--- a/web_static/styles/bottompanel.css
+++ b/web_static/styles/bottompanel.css
@@ -280,6 +280,7 @@
     margin-left: 3%;
     border-radius: 10px;
     background-color: #333131;
+    overflow: auto;
 }
 #horrizontalChart{
     border: 1px solid #4b3838;
@@ -302,14 +303,16 @@
 #topPanelRepoDropdown{
     display: inline;
     border: 1px solid #7c7676;
-    width: 20px;
-    height: 24px;
+    width: 24px;
+    height: 20px;
     text-align: center;
-    margin-top: 2px;
-    margin-left: 3.5%;
+    margin-top: 5px;
+    margin-left: 5%;
     border-radius: 10px;
     padding: 2px;
     transition: transform 1ms ease-in;
+    background-color: #080a09;
+    border: 1px greenyellow solid;
 }
 #topPanelHeaderDropdown{
     display: inline;
@@ -322,4 +325,9 @@
     border-radius: 10px;
     padding: 2px;
     transition: transform 1ms ease-in;
+    background-color: #080a09;
+    border: 1px greenyellow solid;
+}
+.fas{
+    color: white;
 }
