--- a/web_static/styles/repostats.css
+++ b/web_static/styles/repostats.css
@@ -18,7 +18,7 @@
 }
 #topPanelRepoHeader{
     display: static;
-    border: 1px solid #4b3838;
+    border: 1px solid #7c7676;
     width: 95%;
     margin-left: 2.5%;
     margin-top: 4px;
@@ -128,7 +128,7 @@
     overflow: auto;
 }
 #repoInfoDiv{
-    /*display: none;*/
+    display: none;
 }
 
 #directoryNumber{
@@ -143,7 +143,7 @@
     padding: 2px;
     color: #CCCCCC;
 }
-#starsNumber{
+#fileNumber{
     display: inline-block;
     border: 1px solid #7c7676;
     width: 11.5%;
@@ -155,7 +155,7 @@
     padding: 2px;
     color: #CCCCCC;
 }
-#forkStatus{
+#visibility{
     display: inline-block;
     border: 1px solid #7c7676;
     width: 11.5%;
@@ -167,7 +167,20 @@
     padding: 2px;
     color: #CCCCCC;
 }
-#createdAt{
+#createdAt1{
+    display: inline-block;
+    border: 1px solid #7c7676;
+    width: 11.5%;
+    height: 3%;
+    text-align: center;
+    margin-top: 5px;
+    margin: auto;
+    border-radius: 10px;
+    padding: 2px;
+    color: #CCCCCC;
+    text-overflow: ellipsis;
+}
+#updatedAt1{
     display: inline-block;
     border: 1px solid #7c7676;
     width: 11.5%;
@@ -179,19 +192,7 @@
     padding: 2px;
     color: #CCCCCC;
 }
-#updatedAt{
-    display: inline-block;
-    border: 1px solid #7c7676;
-    width: 11.5%;
-    height: 3%;
-    text-align: center;
-    margin-top: 5px;
-    margin: auto;
-    border-radius: 10px;
-    padding: 2px;
-    color: #CCCCCC;
-}
-#numberOfStars{
+#openIssues{
     display: inline-block;
     border: 1px solid #7c7676;
     width: 11.5%;
