--- a/web_static/styles/repostats.css
+++ b/web_static/styles/repostats.css
@@ -41,6 +41,12 @@
     border-radius: 8px;
     border: 1px solid #4b3838;
     overflow: auto;
+    background-color: #272727;
+    color: white;
+    border-color: aliceblue;
+}
+#topPanelRepoButton1:hover{
+    transform: scale(1.02);
 }
 
 #topPanelRepoButton2{
